# funchallenge

./: .gitignore  README.md
.github/workflows/: ccpp.yml
C++/: README
C++/DLMS.Asio.Async.Server/: CMakeLists.txt  main.cpp
C++/boost_studies/stacktrace/: CMakeLists.txt  main.cpp
C++/cocor_studies/: CMakeLists.txt
C++/coroutines_studies/: CMakeLists.txt  main.cpp
C++/project_files/msvc-2012/ai/: ai.sln
C++/project_files/msvc-2012/ai/diophantine/: diophantine.vcxproj  diophantine.vcxproj.filters
C++/project_files/msvc-2012/text_formatter/: Описание.txt
C++/project_files/msvc-2012/text_formatter/text_formatter/: text_formatter.vcxproj  text_formatter.vcxproj.filters
C++/src/call_inside_method/: A.h  A.hpp  B.h  B.hpp  CMakeLists.txt  main.cpp
C++/src/diophantine/: diophantine.cpp  diophantine.h  gene.h  main.cpp
C++/src/text_formatter/: HtmlPageParser.cpp  HtmlPageParser.h  PrettyOut.cpp  PrettyOut.h  _precomp.cpp  _precomp.h  convert_utf8_unicode_helper.h  dowloader.cpp  dowloader.h  main.cpp  options.cpp  options.h
C++/text_formatter/: text_formatter.sln  Описание.txt
C++/text_formatter/text_formatter/: HtmlPageParser.cpp  PrettyOut.cpp  dowloader.cpp  dowloader.h  options.cpp  options.h  text_formatter.vcxproj  text_formatter.vcxproj.filters
Java/Resume/: Resume.java  job.ini
Java/call_inside_method/: make_and_run.sh
Java/call_inside_method/src/com/call_inside_method/: A.java  B.java  MainClass.java
Python/: README
Python/page_extractor/: README  get_page.py  in.txt  lenta_xpath.txt  rulez.ini
Python/usdrub/: start.sh  testvtb.py
Python/usdrub/js/: prom.js  sber.js  vtb24.js
